--- a/frontend/src/components/MoviesSection/MoviesSection.css
+++ b/frontend/src/components/MoviesSection/MoviesSection.css
@@ -28,16 +28,18 @@
   background-color: rgb(0, 0, 0, 0.5);
   border: none;
   cursor: pointer;
-  margin: 0.5rem;
   position: absolute;
   height: 100%;
 }
 
 .section-row {
+  padding: 0.5rem;
   display: flex;
+  gap: 0.5rem;
+  position: relative;
   justify-content: space-between;
 }
 
 .section-title {
-  margin: 1rem 0.5rem 0.5rem 0.5rem;
+  margin: 2rem 0.5rem;
 }
