--- a/frontend/src/pages/PageLayout/PageLayout.css
+++ b/frontend/src/pages/PageLayout/PageLayout.css
@@ -10,5 +10,5 @@
 .page-content {
   display: flex;
   flex-wrap: wrap;
-  gap: 1rem;
+  gap: 1.5rem;
 }
